chore: try to fix CMake bugs

--- a/vsrc/CMakeLists.txt
+++ b/vsrc/CMakeLists.txt
@@ -1,5 +1,7 @@
+add_library(vsrc STATIC)
+
 verilate(
-    sim COVERAGE TRACE
+    vsrc COVERAGE TRACE
     INCLUDE_DIRS "${CMAKE_BINARY_DIR}/../vsrc"
     VERILATOR_ARGS -x-assign fast
     SOURCES top.v
