--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,11 @@ jobs:
     - name: env
       # Set the Project Env Packages
       run: |
-        sudo apt install verilator cmake ninja-build
+        sudo apt install git help2man perl python3 make
+        sudo apt install verilator cmake ninja-build gtkwave
+        sudo apt install libfl2
+        sudo apt install libfl-dev
+        sudo apt install zlibc zlib1g zlib1g-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
