chore(github): try to fix CI

--- a/src/sim/CMakeLists.txt
+++ b/src/sim/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(sim src/sim_main.cpp)
 
-target_link_libraries(sim PUBLIC vsrc)
+target_link_libraries(sim PRIVATE vsrc)
+target_include_directories(sim PRIVATE ${VERILATE_INCLUDE_DIRS})
