--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ message(CMAKE_BINARY_DIR = ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin )
 
 find_package(verilator HINTS $ENV{VERILATOR_ROOT})
+message(VERILATOR_ROOT = ${VERILATOR_ROOT})
 
 if (NOT verilator_FOUND)
   message(FATAL_ERROR "Verilator was not found. Either install it, or set the VERILATOR_ROOT environment variable")
