--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         sudo apt install cmake ninja-build
         sudo apt-get install git perl python3 make autoconf g++ flex bison ccache
-        sudo apt-get install libgoogle-perftools-dev numactl perl-doc
+        sudo apt-get install libgoogle-perftools-dev numactl
         sudo apt-get install libfl2
         sudo apt-get install libfl-dev
         sudo apt-get install zlibc zlib1g zlib1g-dev
