--- a/src/sim/CMakeLists.txt
+++ b/src/sim/CMakeLists.txt
@@ -4,3 +4,7 @@ add_executable(sim ${SOURCES})
 
 target_include_directories(sim  PUBLIC include)
 target_link_libraries(sim PRIVATE vsrc)
+
+target_compile_options(sim PRIVATE -fno-omit-frame-pointer)
+target_compile_options(sim PRIVATE -fsanitize=address)
+target_link_options(sim PRIVATE -fsanitize=address)
